--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,13 +17,17 @@
     "emailjs": "^4.0.3",
     "framer-motion": "^11.2.10",
     "html-react-parser": "^5.1.10",
+    "leaflet": "^1.9.4",
     "media-icons": "^1.1.4",
     "react": "^18.2.0",
     "react-chat-engine": "^1.11.28",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
+    "react-leaflet": "^4.2.1",
     "react-player": "^2.16.0",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
