--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,21 +11,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.0.0",
     "@emailjs/browser": "^4.3.3",
+    "@react-three/drei": "^9.56.14",
+    "@react-three/fiber": "^8.13.5",
     "@vidstack/react": "^1.11.21",
     "axios": "^1.7.2",
     "emailjs": "^4.0.3",
-    "framer-motion": "^11.2.10",
+    "framer-motion": "^11.18.2",
     "html-react-parser": "^5.1.10",
     "leaflet": "^1.9.4",
     "media-icons": "^1.1.4",
     "react": "^18.2.0",
-    "react-chat-engine": "^1.11.28",
+    "react-chat-engine": "^0.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-leaflet": "^4.2.1",
     "react-player": "^2.16.0",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "three": "^0.154.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
@@ -38,6 +42,6 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
-    "vite": "^5.2.0"
+    "vite": "^6.3.5"
   }
 }
