--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,7 +29,8 @@
     "react-leaflet": "^4.2.1",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.23.1",
-    "three": "^0.154.0"
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
