--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.2",
     "emailjs": "^4.0.3",
     "framer-motion": "^11.2.10",
+    "gsap": "^3.13.0",
     "html-react-parser": "^5.1.10",
     "leaflet": "^1.9.4",
     "media-icons": "^1.1.4",
