--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,14 @@
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
     "@emailjs/browser": "^4.3.3",
-    "@react-three/drei": "^9.56.14",
+    "@gsap/react": "^2.1.2",
+    "@react-three/drei": "^9.122.0",
     "@react-three/fiber": "^8.13.5",
     "@vidstack/react": "^1.11.21",
     "axios": "^1.7.2",
     "emailjs": "^4.0.3",
     "framer-motion": "^11.18.2",
+    "gsap": "^3.13.0",
     "html-react-parser": "^5.1.10",
     "leaflet": "^1.9.4",
     "media-icons": "^1.1.4",
@@ -30,11 +32,14 @@
     "react-player": "^2.16.0",
     "react-router-dom": "^6.23.1",
     "react-slick": "^0.30.3",
-    "slick-carousel": "^1.8.1"
+    "simplex-noise": "^4.0.3",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.19"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/styled-components": "^5.1.34",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
@@ -43,6 +48,6 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
-    "vite": "^6.3.5"
+    "vite": "^5.4.19"
   }
 }
